It compiles! Ship it!

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 
-        <title>Progressus - Free business bootstrap template by GetTemplate</title>
+        <title>NaAp</title>
 
         <link rel="shortcut icon" href="assets/images/gt_favicon.png">
 
@@ -27,39 +27,40 @@
 
     <body class="home">
         <!-- Fixed navbar -->
-        <div class="navbar navbar-inverse navbar-fixed-top headroom" >
-            <div class="container">
-                <div class="navbar-header">
-                    <!-- Button for smallest screens -->
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+            <div class="navbar navbar-inverse navbar-fixed-top headroom" >
+                <div class="container">
+                    <div class="navbar-header">
+                        <!-- Button for smallest screens -->
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                        <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav pull-right">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More Pages <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="sidebar-left.html">Left Sidebar</a></li>
+                                    <li class="active"><a href="sidebar-right.html">Right Sidebar</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="contact.html">Contact</a></li>>
+                            <li><a class="btn" href="loginNanny.jsp">SIGN IN Nanny</a></li>
+                            <li><a class="btn" href="loginParent.jsp">SIGN IN Parent</a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
                 </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav pull-right">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">More Pages <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="sidebar-left.html">Left Sidebar</a></li>
-                                <li class="active"><a href="sidebar-right.html">Right Sidebar</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="contact.html">Contact</a></li>>
-                        <li><a class="btn" href="signin.html">SIGN IN / SIGN UP</a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
-            </div>
-        </div> 
+            </div> 
         <!-- /.navbar -->
 
         <!-- Header -->
         <header id="head">
             <div class="container">
                 <div class="row">
-                    <h1 class="lead">AWESOME, CUSTOMIZABLE, FREE</h1>
-                    <p class="tagline">PROGRESSUS: free business bootstrap template by <a href="http://www.gettemplate.com/?utm_source=progressus&amp;utm_medium=template&amp;utm_campaign=progressus">GetTemplate</a></p>
-                    <p><a class="btn btn-default btn-lg" role="button" href="signinParent.jsp">Find Nanny</a> <a class="btn btn-action btn-lg" role="button" href="signinNanny.jsp">Find Job</a></p>
+                    <h1 class="lead">Welcome to NAAP</h1>
+                    <p class="tagline">NAAP helps you find a nanny to look after your child</p>
+                    <p><a class="btn btn-default btn-lg" role="button" href="registerParent.jsp">Find Nanny</a> <a class="btn btn-action btn-lg" role="button" href="registerNanny.jsp">Find Job</a></p>
                 </div>
             </div>
         </header>
@@ -224,7 +225,7 @@
                                     <a href="about.html">About</a> |
                                     <a href="sidebar-right.html">Sidebar</a> |
                                     <a href="contact.html">Contact</a> |
-                                    <b><a href="signup.html">Sign up</a></b>
+                                    <b><a href="signupParent.html">Sign up</a></b>
                                 </p>
                             </div>
                         </div>
