--- a/web/portfolio-details.html
+++ b/web/portfolio-details.html
@@ -54,7 +54,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo mr-auto"><img src="1assets/img/logo.png" alt=""></a>
+      <a href="index_2.html" class="logo mr-auto"><img src="1assets/img/logo.png" alt=""></a>
       <!-- Uncomment below if you prefer to use a text logo -->
       <!-- <h1 class="logo mr-auto"><a href="index.html">Imperial</a></h1> -->
 
@@ -100,7 +100,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Portfoio Details</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index_2.html">Home</a></li>
             <li>Portfoio Details</li>
           </ol>
         </div>
